[project]
name = "geiger-logger"
version = "0.1.0"
description = "Simple Flask API for logging Geiger counter readings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pydantic>=2.7.0",
    "ruff>=0.15.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0"
]

[tool.uv]
# uv będzie używać tego do zarządzania środowiskiem